--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -289,7 +289,7 @@
                       </div>
                       <div class="row d-flex justify-content-center mt-3 mb-5 margteng align-items-center">
                         <div class="col-md-12">
-                          <h1 class="text-center">Bahan Kulit suede</h1>
+                          <h1 class="text-center">Bahan Kulit Suede</h1>
                           <p style="text-align: justify; text-indent: 4rem">Bahan kulit suede termasuk ke dalam jenis tas yang permukaan halus seperti kain beludru karena dibuat dari bagian dalam kulit hewan yang dekat dengan daging.</p>
                         </div>
                       </div>
