--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         <div class="row d-flex justify-content-center align-items-center my-5">
           <div class="col-md-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">
             <h1>Our Values</h1>
-            <ul class="text-start values">
+            <ul class="text-start">
               <li class="my-2 t-values">Passion - Semangat bekerja keras</li>
               <li class="my-2 t-values">Attitude - Sopan santun</li>
               <li class="my-2 t-values">Personality - Pribadi yang dapat diandalkan</li>
