--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <div class="row ahay d-flex align-items-center justify-content-center mx-auto tinggi-cont">
           <div class="col-md-10 text-white">
             <h1 class="judulbesar py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">KOLEKSI FASHION KULIT</h1>
-            <h3 class="judulsedang py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="500" data-aos-duration="1000" data-aos-mirror="true">DESAIN KERAJINAN TANGAN</h3>
-            <p class="judulkecil py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="1000" data-aos-duration="1000" data-aos-mirror="true">
+            <h3 class="judulsedang py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true">DESAIN KERAJINAN TANGAN</h3>
+            <p class="judulkecil py-1" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">
               Telusuri koleksi busana kulit terbaru dari KulitAbdi.Co. Produk kami berkualitas tinggi karena kami memproduksi dengan bahan dasar fashion kulit asli buatan tangan (vintage) dan setiap bahan yang kami gunakan harus melewati
               kontrol kualitas standar untuk menjamin kualitas produk kami.
             </p>
-            <div data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="1500" data-aos-duration="1000" data-aos-mirror="true">
+            <div data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="650" data-aos-duration="1000" data-aos-mirror="true">
               <a class="btn btn-lg btn-outline-primary" href="#jelajah" role="button"><h4 class="Explore py-1">Jelajahi lebih lanjut</h4></a>
             </div>
           </div>
@@ -143,11 +143,11 @@
                             <p class="text-body">Bergaya simple namun elegan sehingga tetap menarik walaupun dipadukan dengan gaya apapun.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 166.500</s></sup></span
                               >
-                              Rp 99.900</span
+                              <b>Rp 99.900</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -191,11 +191,11 @@
                             <p class="text-body">Tas selempang yang elegant untuk Anda para eksekutif muda atau para pria yang bekerja di kantoran.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 201.250</s></sup></span
                               >
-                              Rp 120.750</span
+                              <b>Rp 120.750</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -239,11 +239,11 @@
                             <p class="text-body">Sarung tangan menutupi seluruh bagian jari, tidak panas, dan kualitas jahitan bagus.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 53.250</s></sup></span
                               >
-                              Rp 31.950</span
+                              <b>Rp 31.950</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -293,11 +293,11 @@
                             <p class="text-body">Bergaya simple namun elegan sehingga tetap menarik walaupun dipadukan dengan gaya apapun.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 166.500</s></sup></span
                               >
-                              Rp 99.900</span
+                              <b>Rp 99.900</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -341,11 +341,11 @@
                             <p class="text-body">Tas selempang yang elegant untuk Anda para eksekutif muda atau para pria yang bekerja di kantoran.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 201.250</s></sup></span
                               >
-                              Rp 120.750</span
+                              <b>Rp 120.750</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -389,11 +389,11 @@
                             <p class="text-body">Sarung tangan menutupi seluruh bagian jari, tidak panas, dan kualitas jahitan bagus.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 53.250</s></sup></span
                               >
-                              Rp 31.950</span
+                              <b>Rp 31.950</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -443,11 +443,11 @@
                             <p class="text-body">Bergaya simple namun elegan sehingga tetap menarik walaupun dipadukan dengan gaya apapun.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 166.500</s></sup></span
                               >
-                              Rp 99.900</span
+                              <b>Rp 99.900</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -491,11 +491,11 @@
                             <p class="text-body">Tas selempang yang elegant untuk Anda para eksekutif muda atau para pria yang bekerja di kantoran.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 201.250</s></sup></span
                               >
-                              Rp 120.750</span
+                              <b>Rp 120.750</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -539,11 +539,11 @@
                             <p class="text-body">Sarung tangan menutupi seluruh bagian jari, tidak panas, dan kualitas jahitan bagus.</p>
                           </div>
                           <div class="card-footer">
-                            <span class="text-promo"
-                              ><span class="text-asli"
+                            <span class="text-promo" style="color: red"
+                              ><span class="text-asli" style="color: black"
                                 ><sup><s>Rp 53.250</s></sup></span
                               >
-                              Rp 31.950</span
+                              <b>Rp 31.950</b></span
                             >
                             <div class="card-button">
                               <svg class="svg-icon" viewBox="0 0 20 20">
@@ -604,23 +604,23 @@
         <div class="row mt-1 d-flex text-center">
           <div class="col-md-4">
             <img src="img/toko.jpg" style="width: 325px; height: 225px; margin-bottom: 1rem; border-radius: 10px" data-aos="fade-down" data-aos-offset="200" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" alt="" />
-            <h3 class="pb-1" data-aos="fade-down" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">Lokasi</h3>
+            <h3 class="pb-1" data-aos="fade-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Lokasi</h3>
             <h6 class="spctxt text-start" data-aos="fade-down" data-aos-offset="200" data-aos-delay="650" data-aos-duration="1000" data-aos-mirror="true">
               Terletak di bagian utara jantung kota Bandung. 200 meter dari pintu keluar tol Pasteur. Kami berencana untuk membuka toko di beberapa kota besar di Indonesia
             </h6>
           </div>
           <div class="col-md-4">
             <img src="img/ahli.jpg" style="width: 325px; height: 225px; margin-bottom: 1rem; border-radius: 10px" data-aos="fade-down" data-aos-offset="200" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" alt="" />
-            <h3 class="pb-1" data-aos="fade-down" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">Jelajah</h3>
+            <h3 class="pb-1" data-aos="fade-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Jelajah</h3>
             <h6 class="spctxt text-start" data-aos="fade-down" data-aos-offset="200" data-aos-delay="650" data-aos-duration="1000" data-aos-mirror="true">
               Kami memiliki beberapa ruangan untuk melihat-lihat produk kami. Asisten ahli kami dapat memandu Anda memilih produk terbaik yang cocok untuk Anda.
             </h6>
           </div>
           <div class="col-md-4">
             <img src="img/jelajah.jpg" style="width: 325px; height: 225px; margin-bottom: 1rem; border-radius: 10px" data-aos="fade-down" data-aos-offset="200" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" alt="" />
-            <h3 class="pb-1" data-aos="fade-down" data-aos-offset="200" data-aos-delay="450" data-aos-duration="1000" data-aos-mirror="true">Beli</h3>
+            <h3 class="pb-1" data-aos="fade-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Beli</h3>
             <h6 class="spctxt text-start" data-aos="fade-down" data-aos-offset="200" data-aos-delay="650" data-aos-duration="1000" data-aos-mirror="true">
-              Apakah Anda sedang mencari oleh-oleh atau sesuatu untuk dibawa pulang, kami memiliki banyak pilihan produk kulit terbaik di seluruh Indonesia.
+              Apakah Anda sedang mencari oleh-oleh atau sesuatu untuk dibawa pulang? Kami memiliki banyak pilihan produk kulit terbaik di seluruh Indonesia.
             </h6>
           </div>
         </div>
