--- a/about.html
+++ b/about.html
@@ -26,37 +26,45 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid align-items-center">
-        <img class="logo" id="logo" src="img/logo2.png" alt="" />
-
-        <a class="nav-link ms-3 me-3 align-items-center pt-2" id="tekshaha3" href="index.html">KulitAbdi.Co</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon" style="color: white"></span>
+    <nav class="navbar nav sticky-top">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-list" viewBox="0 0 13 13">
+            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+          </svg>
         </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 200px">
-            <li class="nav-item mx-2 pt-2">
-              <a class="nav-link" id="tekshaha" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item mx-2 pt-2">
-              <a class="nav-link" id="tekshaha1" href="product.html">Products</a>
-            </li>
-            <li class="nav-item mx-2 pt-2">
-              <a class="nav-link" id="tekshaha10" href="TipsTrick.html">Tips&Trick</a>
-            </li>
-            <li class="nav-item mx-2 pt-2">
-              <a class="nav-link" id="tekshaha2" href="contact.html">Contact Us</a>
+        <div class="order-0">
+          <h1><a class="navbar-brand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a></h1>
+        </div>
+        <div class="mx-auto order-0">
+          <h1><a class="navbar-brand mx-auto fw-bold" href="index.html">K u l i t A b d i . c o</a></h1>
+        </div>
+        <div class="">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <button class="BtnAnm">Sign in</button>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <li class="nav-item mx-2 pt-2 d-flex">
-              <!-- <a class="btn btn-outline-primary px-4 link-border" href="login.html">Login</a> -->
-              <button href="login.html" id="tekshaha4" class="btnlog">Login</button>
-            </li>
-          </form>
         </div>
       </div>
+      <!-- <div class=" border" id="navbarToggleExternalContent"> -->
+      <div class="navbar-expand-lg collapse m-auto" id="navbarToggleExternalContent">
+        <ul class="navbar-nav">
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="product.html">Products</a>
+          </li>
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
+          </li>
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+      <!-- </div> -->
     </nav>
 
     <div class="container text-center margprod">
@@ -221,6 +229,7 @@
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
