--- a/index.html
+++ b/index.html
@@ -29,48 +29,46 @@
   </head>
   <body>
     <!-- Image Overlay -->
-    <div class="bgHero">
-      <nav class="navbar nav sticky-top">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-list" viewBox="0 0 13 13">
-              <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-            </svg>
-          </button>
-          <div class="order-0">
-            <h1><a class="navbar-brand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a></h1>
-          </div>
-          <div class="mx-auto order-0">
-            <h1><a class="navbar-brand mx-auto fw-bold" href="index.html">K u l i t A b d i . c o</a></h1>
-          </div>
-          <div class="">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <button class="BtnAnm">Sign in</button>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar nav sticky-top">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-list" viewBox="0 0 13 13">
+            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+          </svg>
+        </button>
+        <div class="order-0">
+          <h1><a class="navbar-brand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a></h1>
         </div>
-        <!-- <div class=" border" id="navbarToggleExternalContent"> -->
-        <div class="navbar-expand-lg collapse m-auto" id="navbarToggleExternalContent">
-          <ul class="navbar-nav">
-            <li class="nav-item pt-2 mx-2">
-              <a class="nav-link" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item pt-2 mx-2">
-              <a class="nav-link" href="product.html">Products</a>
-            </li>
-            <li class="nav-item pt-2 mx-2">
-              <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
-            </li>
-            <li class="nav-item pt-2 mx-2">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+        <div class="mx-auto order-0">
+          <h1><a class="navbar-brand mx-auto fw-bold" href="index.html">K u l i t A b d i . c o</a></h1>
+        </div>
+        <div class="">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <button class="BtnAnm">Sign in</button>
             </li>
           </ul>
         </div>
-        <!-- </div> -->
-      </nav>
-    </div>
+      </div>
+      <!-- <div class=" border" id="navbarToggleExternalContent"> -->
+      <div class="navbar-expand-lg collapse m-auto" id="navbarToggleExternalContent">
+        <ul class="navbar-nav">
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="product.html">Products</a>
+          </li>
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
+          </li>
+          <li class="nav-item pt-2 mx-2">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+      <!-- </div> -->
+    </nav>
 
     <div class="container">
       <div class="text-center">
@@ -599,40 +597,46 @@
     <!--  -->
     <div class="container mt-5 mb-5 pb-5">
       <div class="row align-items-center">
-        <div class="col-sm-4 mb-3 mb-sm-0 my-5 tengaheuy">
+        <div class="col-sm-4 mb-3 mb-sm-0 tengaheuy">
           <h1>T o k o K a m i</h1>
           <h3>KulitAbdi.Co</h3>
           <h6>berada di jantung kota Bandung</h6>
         </div>
-        <div class="col-sm-4 mb-3 mb-sm-0">
+        <div class="col-sm-8 mb-3 mb-sm-0">
           <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="1000">
-                <img src="img/bdg.jpg" class="d-block gambar-jelajah" alt="..." />
+                <div class="row d-flex align-items-center">
+                  <div class="col-md-6">
+                    <img src="img/bdg.jpg" class="gambar-jelajah" alt="..." />
+                  </div>
+                  <div class="col-md-6">
+                    <h1 class="">L O K A S I</h1>
+                    <p class="">Terletak di bagian utara jantung kota Bandung. 200 meter dari pintu keluar tol Pasteur. Kami berencana untuk membuka toko di beberapa kota besar di Indonesia</p>
+                  </div>
+                </div>
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="img/jelajah.jpg" class="d-block gambar-jelajah" alt="..." />
+                <div class="row d-flex align-items-center">
+                  <div class="col-md-6">
+                    <img src="img/jelajah.jpg" class="d-block gambar-jelajah" alt="..." />
+                  </div>
+                  <div class="col-md-6">
+                    <h1>J E L A J A H</h1>
+                    <p>Kami memiliki beberapa ruangan untuk melihat-lihat produk kami. Asisten ahli kami dapat memandu Anda memilih produk terbaik yang cocok untuk Anda.</p>
+                  </div>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="img/ahli.jpg" class="d-block gambar-jelajah" alt="..." />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 mb-3 mb-sm-0 my-5 tengaheuy">
-          <div id="carouselExampleInterval1" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="1000">
-                <h1>L O K A S I</h1>
-                <p>Terletak di bagian utara jantung kota Bandung. 200 meter dari pintu keluar tol Pasteur. Kami berencana untuk membuka toko di beberapa kota besar di Indonesia</p>
-              </div>
-              <div class="carousel-item" data-bs-interval="1000">
-                <h1>J E L A J A H</h1>
-                <p>Kami memiliki beberapa ruangan untuk melihat-lihat produk kami. Asisten ahli kami dapat memandu Anda memilih produk terbaik yang cocok untuk Anda.</p>
-              </div>
-              <div class="carousel-item">
-                <h1>B E L I</h1>
-                <p>Apakah Anda sedang mencari oleh-oleh atau sesuatu untuk dibawa pulang, kami memiliki banyak pilihan produk kulit terbaik di seluruh Indonesia.</p>
+                <div class="row d-flex align-items-center">
+                  <div class="col-md-6">
+                    <img src="img/ahli.jpg" class="d-block gambar-jelajah" alt="..." />
+                  </div>
+                  <div class="col-md-6">
+                    <h1>B E L I</h1>
+                    <p>Apakah Anda sedang mencari oleh-oleh atau sesuatu untuk dibawa pulang, kami memiliki banyak pilihan produk kulit terbaik di seluruh Indonesia.</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
