--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
 
       <!-- <div class="container text-center align-middle"> -->
-      <button class="cta">
+      <!-- <button class="cta">
         <span class="span">NEXT</span>
         <span class="second">
           <svg width="50px" height="20px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -117,12 +117,69 @@
             </g>
           </svg>
         </span>
-      </button>
+      </button> -->
       <!-- </div> -->
     </div>
-    <!--  -->
 
-    <!--  -->
+    <section>
+      <div class="container" style="background-color: #ffc0ad; border-radius: 15px">
+        <div class="row d-flex px-3 py-4">
+          <div class="col-md-12">
+            <div class="row d-flex mb-3 align-items-end">
+              <div class="col-md-10">
+                <h4><b>Info untukmu</b></h4>
+              </div>
+              <div class="col-md-2">
+                <a class="text-end" style="text-decoration: none"><h5>Lihat semua</h5></a>
+              </div>
+            </div>
+            <div class="row d-flex">
+              <div class="col-md-3">
+                <div class="row d-flex">
+                  <div class="col-md-3">
+                    <div style="background-color: gray; width: 75px; height: 75px"></div>
+                  </div>
+                  <div class="col-md-9">
+                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="row d-flex">
+                  <div class="col-md-3">
+                    <div style="background-color: gray; width: 75px; height: 75px"></div>
+                  </div>
+                  <div class="col-md-9">
+                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="row d-flex">
+                  <div class="col-md-3">
+                    <div style="background-color: gray; width: 75px; height: 75px"></div>
+                  </div>
+                  <div class="col-md-9">
+                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="row d-flex">
+                  <div class="col-md-3">
+                    <div style="background-color: gray; width: 75px; height: 75px"></div>
+                  </div>
+                  <div class="col-md-9">
+                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="container">
       <h2 class="text-dark text-center pt-5 mt-5" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Special Discount Hingga 60%</h2>
       <h4 class="text-dark text-center" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="500" data-aos-duration="1000" data-aos-mirror="true">03-28 Maret 2023</h4>
