--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
 
     <section>
-      <div class="container" style="background-color: #ffc0ad; border-radius: 15px">
+      <div class="container mt-5" style="background-color: #ffc0ad; border-radius: 15px" data-aos="zoom-in-down" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
         <div class="row d-flex px-3 py-4">
           <div class="col-md-12">
             <div class="row d-flex mb-3 align-items-end">
@@ -136,41 +136,41 @@
             <div class="row d-flex">
               <div class="col-md-3">
                 <div class="row d-flex">
-                  <div class="col-md-3">
-                    <div style="background-color: gray; width: 75px; height: 75px"></div>
+                  <div class="col-md-3" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                    <div style="width: 75px; height: 75px"><img src="img/info1.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
                   </div>
-                  <div class="col-md-9">
-                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
+                  <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                    <p><b>Khusus Pengguna Baru</b><br />Cashback 20% Untuk Kamu Pelanggan Baru</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="row d-flex" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                  <div class="col-md-3">
+                    <div style="width: 75px; height: 75px"><img src="img/info2.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
+                  </div>
+                  <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                    <p><b>Bayar Dengan Bitcoin </b><br />Dapatkan Diskon Hingga Rp500.000</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="row d-flex">
-                  <div class="col-md-3">
-                    <div style="background-color: gray; width: 75px; height: 75px"></div>
+                  <div class="col-md-3" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                    <div style="width: 75px; height: 75px"><img src="img/info3.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
                   </div>
-                  <div class="col-md-9">
-                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3">
-                <div class="row d-flex">
-                  <div class="col-md-3">
-                    <div style="background-color: gray; width: 75px; height: 75px"></div>
-                  </div>
-                  <div class="col-md-9">
-                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
+                  <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                    <p><b>Gratis Ongkir </b><br />Minimal Belanja Rp100.000 Seluruh Indonesia</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-3">
-                <div class="row d-flex">
+                <div class="row d-flex" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
                   <div class="col-md-3">
-                    <div style="background-color: gray; width: 75px; height: 75px"></div>
+                    <div style="width: 75px; height: 75px"><img src="img/info4.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
                   </div>
-                  <div class="col-md-9">
-                    <p><b>Khusus Pengguna Baru</b><br />Cashbak 20% Untuk Kamu Pelanggan Baru</p>
+                  <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                    <p><b>Produk Terlaris</b><br />Rekomendasi Produk Untuk Kamu</p>
                   </div>
                 </div>
               </div>
@@ -181,12 +181,12 @@
     </section>
 
     <div class="container">
-      <h2 class="text-dark text-center pt-5 mt-5" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Special Discount Hingga 60%</h2>
+      <h2 class="text-dark text-center mt-5" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Special Discount Hingga 60%</h2>
       <h4 class="text-dark text-center" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="500" data-aos-duration="1000" data-aos-mirror="true">03-28 Maret 2023</h4>
       <h6 class="text-dark text-center" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="500" data-aos-duration="1000" data-aos-mirror="true">S&K berlaku</h6>
     </div>
 
-    <div class="col-md-10 text-center m-auto">
+    <div class="col-md-10 text-center m-auto" data-aos="fade-in" data-aos-delay="150" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
       <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -652,14 +652,14 @@
     </div>
 
     <!--  -->
-    <div class="container mt-5 mb-5 pb-5">
+    <div class="container mt-5 mb-5">
       <div class="row align-items-center">
-        <div class="col-sm-4 mb-3 mb-sm-0 tengaheuy">
+        <div class="col-sm-4 mb-3 mb-sm-0 tengaheuy" data-aos="zoom-in-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
           <h1>T o k o K a m i</h1>
           <h3>KulitAbdi.Co</h3>
           <h6>berada di jantung kota Bandung</h6>
         </div>
-        <div class="col-sm-8 mb-3 mb-sm-0">
+        <div class="col-sm-8 mb-3 mb-sm-0" data-aos="fade-in" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
           <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="1000">
@@ -709,7 +709,7 @@
             <h5 class="display-5" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">Tren Produk Kulit</h5>
           </div>
         </div>
-        <div class="col-md-9" style="margin: auto">
+        <div class="col-md-9" style="margin: auto" data-aos="fade-in" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
           <canvas id="myChart"></canvas>
         </div>
       </div>
@@ -724,7 +724,7 @@
             <h5 class="display-5" data-aos="fade-up" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">Testimoni</h5>
           </div>
         </div>
-        <div class="row align-items-md-center text-white" data-aos="fade-up" data-aos-delay="1100" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+        <div class="row align-items-md-center text-white" data-aos="fade-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="carousel" data-bs-interval="5000" data-bs-ride="carousel">
               <!-- Wrapper for slides -->
