--- a/about.html
+++ b/about.html
@@ -34,15 +34,17 @@
           </svg>
         </button>
         <div class="order-0">
-          <h1><a class="navbar-brand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a></h1>
+          <h1>
+            <a class="navbar-brand hehehe-boy" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a>
+          </h1>
         </div>
         <div class="mx-auto order-0">
-          <h1><a class="navbar-brand mx-auto fw-bold" href="index.html">K u l i t A b d i . c o</a></h1>
+          <h1><a class="navbar-brand mx-auto fw-bold hehehe-boy" href="index.html">K u l i t A b d i . c o</a></h1>
         </div>
         <div class="">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <button class="BtnAnm">Sign in</button>
+              <button class="BtnAnm hehehe-boy">Sign in</button>
             </li>
           </ul>
         </div>
@@ -51,16 +53,16 @@
       <div class="navbar-expand-lg collapse m-auto" id="navbarToggleExternalContent">
         <ul class="navbar-nav">
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="about.html">About Us</a>
+            <a class="nav-link text-center" href="about.html">About Us</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="product.html">Products</a>
+            <a class="nav-link text-center" href="product.html">Products</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
+            <a class="nav-link text-center" href="TipsTrick.html">Tips&Trick</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link text-center" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
