--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -25,8 +25,8 @@
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
-  <body>
-    <nav class="navbar nav sticky-top">
+  <body style="background-color: #dadada">
+    <nav class="navbar nav sticky-top" style="background-color: white">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-list" viewBox="0 0 13 13">
@@ -34,13 +34,15 @@
           </svg>
         </button>
         <div class="order-0">
-          <h1><a class="navbar-brand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a></h1>
+          <h1>
+            <a class="navbar-brand hehehe-boy" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a>
+          </h1>
         </div>
         <div class="mx-auto order-0">
-          <h1><a class="navbar-brand mx-auto fw-bold" href="index.html">K u l i t A b d i . c o</a></h1>
+          <h1><a class="navbar-brand mx-auto fw-bold hehehe-boy" href="index.html">K u l i t A b d i . c o</a></h1>
         </div>
         <div class="">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav hehehe-boy ms-auto">
             <li class="nav-item">
               <button class="BtnAnm">Sign in</button>
             </li>
@@ -51,16 +53,16 @@
       <div class="navbar-expand-lg collapse m-auto" id="navbarToggleExternalContent">
         <ul class="navbar-nav">
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="about.html">About Us</a>
+            <a class="nav-link text-center" href="about.html">About Us</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="product.html">Products</a>
+            <a class="nav-link text-center" href="product.html">Products</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
+            <a class="nav-link text-center" href="TipsTrick.html">Tips&Trick</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link text-center" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -70,14 +72,14 @@
       <div class="container" style="margin-top: -4.5rem">
         <div class="row d-flex align-items-center">
           <div class="col-md-5 text-center">
-            <img class="foto1" src="img/tips1.jpg" alt="" />
+            <img class="foto1" src="img/tips1.jpg" style="border-radius: 15px" alt="" />
             <h3 class="text-start kecil">Cara Terbaik Merawat Jaket Kulit</h3>
             <h5 class="text-start">Tahan Lama dan Anti Jamur</h5>
             <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
             <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
               <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="staticBackdropLabel">Cara Terbaik Merawat Jaket Kulit, Tahan Lama dan Anti Jamur</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <button type="button" class="btn-lg btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
                 <div class="container">
@@ -144,14 +146,14 @@
           <div class="col-md-7">
             <div class="row">
               <div class="col-md-6">
-                <img class="foto12" src="img/sepatu_rawat.jpg" alt="" />
+                <img class="foto12" style="border-radius: 15px" src="img/sepatu_rawat.jpg" alt="" />
                 <h4 class="kecil">Merawat Sepatu Kulit Dengan Mudah dan Cepat</h4>
                 <h6>Tahan Air dan Berkilau</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop1" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Merawat Sepatu Kulit Dengan Mudah dan Cepat, Tahan Air dan Berkilau</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-lg btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
                     <div class="container">
@@ -203,14 +205,14 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <img class="foto12" src="img/bahan_kulit.jpg" alt="" />
+                <img class="foto12" style="border-radius: 15px" src="img/bahan_kulit.jpg" alt="" />
                 <h4>Cara Mengidentifikasi Bahan Kulit Asli</h4>
                 <h6>Kulit Asli vs Kulit Sintetis</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop2" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Cara Mengidentifikasi Bahan Kulit Asli, Kulit Asli vs Kulit Sintetis</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-lg btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
                     <div class="container">
@@ -275,14 +277,14 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <img class="foto12" src="img/jelajah.jpg" alt="" />
+                <img class="foto12" style="border-radius: 15px" src="img/jelajah.jpg" alt="" />
                 <h4>Jenis Bahan Tas Kulit yang Banyak Dicari</h4>
                 <h6>Bahan Terbaik Terpilih Oleh Ahli</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop3" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Jenis Bahan Tas Kulit yang Banyak Dicari, Bahan Terbaik Terpilih Oleh Ahli</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-lg btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
                     <div class="container">
@@ -332,14 +334,14 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <img class="foto12" src="img/about3.jpg" alt="" />
+                <img class="foto12" style="border-radius: 15px" src="img/about3.jpg" alt="" />
                 <h4>Cara Memilih Jaket Kulit Berkualitas</h4>
                 <h6>Nyaman dan Tidak Panas Digunakan</h6>
                 <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop4" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Cara Memilih Jaket Kulit Berkualitas, Nyaman dan Tidak Panas Digunakan</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-lg btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
                     <div class="container">
