--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
           </svg>
         </button>
         <div class="order-0">
-          <h1><a class="navbar-brand" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a></h1>
+          <h1>
+            <a class="navbar-brand hehehe-boy" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">Menu</a>
+          </h1>
         </div>
         <div class="mx-auto order-0">
-          <h1><a class="navbar-brand mx-auto fw-bold" href="index.html">K u l i t A b d i . c o</a></h1>
+          <h1><a class="navbar-brand mx-auto fw-bold hehehe-boy" href="index.html">K u l i t A b d i . c o</a></h1>
         </div>
         <div class="">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <button class="BtnAnm">Sign in</button>
+              <button class="BtnAnm hehehe-boy">Sign in</button>
             </li>
           </ul>
         </div>
@@ -54,16 +56,16 @@
       <div class="navbar-expand-lg collapse m-auto" id="navbarToggleExternalContent">
         <ul class="navbar-nav">
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="about.html">About Us</a>
+            <a class="nav-link text-center" href="about.html">About Us</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="product.html">Products</a>
+            <a class="nav-link text-center" href="product.html">Products</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="TipsTrick.html">Tips&Trick</a>
+            <a class="nav-link text-center" href="TipsTrick.html">Tips&Trick</a>
           </li>
           <li class="nav-item pt-2 mx-2">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link text-center" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -74,8 +76,8 @@
       <div class="text-center">
         <img class="mx-auto" src="img/brunch.png" alt="" />
       </div>
-      <h2 class="text-dark text-center" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="10" data-aos-duration="1000" data-aos-mirror="true">K O L E K S I &nbsp;&nbsp; F A S H I O N &nbsp;&nbsp; K U L I T</h2>
-      <h4 class="text-dark text-center" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">D E S A I N &nbsp; K E R A J I N A N &nbsp; T A N G A N</h4>
+      <h2 class="text-dark text-center jud" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="10" data-aos-duration="1000" data-aos-mirror="true">K O L E K S I &nbsp;&nbsp; F A S H I O N &nbsp;&nbsp; K U L I T</h2>
+      <h4 class="text-dark text-center sub-jud" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">D E S A I N &nbsp; K E R A J I N A N &nbsp; T A N G A N</h4>
 
       <div class="container">
         <div class="row d-flex flex-wrap justify-content-center text-center mt-5 mb-3">
@@ -92,38 +94,11 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="container text-center align-middle"> -->
-      <!-- <button class="cta">
-        <span class="span">NEXT</span>
-        <span class="second">
-          <svg width="50px" height="20px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-              <path
-                class="one"
-                d="M40.1543933,3.89485454 L43.9763149,0.139296592 C44.1708311,-0.0518420739 44.4826329,-0.0518571125 44.6771675,0.139262789 L65.6916134,20.7848311 C66.0855801,21.1718824 66.0911863,21.8050225 65.704135,22.1989893 C65.7000188,22.2031791 65.6958657,22.2073326 65.6916762,22.2114492 L44.677098,42.8607841 C44.4825957,43.0519059 44.1708242,43.0519358 43.9762853,42.8608513 L40.1545186,39.1069479 C39.9575152,38.9134427 39.9546793,38.5968729 40.1481845,38.3998695 C40.1502893,38.3977268 40.1524132,38.395603 40.1545562,38.3934985 L56.9937789,21.8567812 C57.1908028,21.6632968 57.193672,21.3467273 57.0001876,21.1497035 C56.9980647,21.1475418 56.9959223,21.1453995 56.9937605,21.1432767 L40.1545208,4.60825197 C39.9574869,4.41477773 39.9546013,4.09820839 40.1480756,3.90117456 C40.1501626,3.89904911 40.1522686,3.89694235 40.1543933,3.89485454 Z"
-                fill="#FFFFFF"
-              ></path>
-              <path
-                class="two"
-                d="M20.1543933,3.89485454 L23.9763149,0.139296592 C24.1708311,-0.0518420739 24.4826329,-0.0518571125 24.6771675,0.139262789 L45.6916134,20.7848311 C46.0855801,21.1718824 46.0911863,21.8050225 45.704135,22.1989893 C45.7000188,22.2031791 45.6958657,22.2073326 45.6916762,22.2114492 L24.677098,42.8607841 C24.4825957,43.0519059 24.1708242,43.0519358 23.9762853,42.8608513 L20.1545186,39.1069479 C19.9575152,38.9134427 19.9546793,38.5968729 20.1481845,38.3998695 C20.1502893,38.3977268 20.1524132,38.395603 20.1545562,38.3934985 L36.9937789,21.8567812 C37.1908028,21.6632968 37.193672,21.3467273 37.0001876,21.1497035 C36.9980647,21.1475418 36.9959223,21.1453995 36.9937605,21.1432767 L20.1545208,4.60825197 C19.9574869,4.41477773 19.9546013,4.09820839 20.1480756,3.90117456 C20.1501626,3.89904911 20.1522686,3.89694235 20.1543933,3.89485454 Z"
-                fill="#FFFFFF"
-              ></path>
-              <path
-                class="three"
-                d="M0.154393339,3.89485454 L3.97631488,0.139296592 C4.17083111,-0.0518420739 4.48263286,-0.0518571125 4.67716753,0.139262789 L25.6916134,20.7848311 C26.0855801,21.1718824 26.0911863,21.8050225 25.704135,22.1989893 C25.7000188,22.2031791 25.6958657,22.2073326 25.6916762,22.2114492 L4.67709797,42.8607841 C4.48259567,43.0519059 4.17082418,43.0519358 3.97628526,42.8608513 L0.154518591,39.1069479 C-0.0424848215,38.9134427 -0.0453206733,38.5968729 0.148184538,38.3998695 C0.150289256,38.3977268 0.152413239,38.395603 0.154556228,38.3934985 L16.9937789,21.8567812 C17.1908028,21.6632968 17.193672,21.3467273 17.0001876,21.1497035 C16.9980647,21.1475418 16.9959223,21.1453995 16.9937605,21.1432767 L0.15452076,4.60825197 C-0.0425130651,4.41477773 -0.0453986756,4.09820839 0.148075568,3.90117456 C0.150162624,3.89904911 0.152268631,3.89694235 0.154393339,3.89485454 Z"
-                fill="#FFFFFF"
-              ></path>
-            </g>
-          </svg>
-        </span>
-      </button> -->
-      <!-- </div> -->
     </div>
 
     <section>
-      <div class="container mt-5" style="background-color: #ffc0ad; border-radius: 15px" data-aos="zoom-in-down" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
-        <div class="row d-flex px-3 py-4">
+      <div class="container mt-5" style="background-color: #d1b298; border-radius: 15px" data-aos="zoom-in-down" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+        <div class="row px-3 py-4">
           <div class="col-md-12">
             <div class="row d-flex mb-3 align-items-end">
               <div class="col-md-10">
@@ -134,40 +109,40 @@
               </div>
             </div>
             <div class="row d-flex">
-              <div class="col-md-3">
-                <div class="row d-flex">
-                  <div class="col-md-3" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
-                    <div style="width: 75px; height: 75px"><img src="img/info1.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
+              <div class="col-md-3 tengah">
+                <div class="row d-flex" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+                  <div class="col-md-3">
+                    <div class="mx-auto" style="width: 75px; height: 75px"><img src="img/info1.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
                   </div>
                   <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
                     <p><b>Khusus Pengguna Baru</b><br />Cashback 20% Untuk Kamu Pelanggan Baru</p>
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 tengah">
                 <div class="row d-flex" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
                   <div class="col-md-3">
-                    <div style="width: 75px; height: 75px"><img src="img/info2.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
+                    <div class="mx-auto" style="width: 75px; height: 75px"><img src="img/info2.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
                   </div>
                   <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
                     <p><b>Bayar Dengan Bitcoin </b><br />Dapatkan Diskon Hingga Rp500.000</p>
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 tengah">
                 <div class="row d-flex">
                   <div class="col-md-3" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
-                    <div style="width: 75px; height: 75px"><img src="img/info3.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
+                    <div class="mx-auto" style="width: 75px; height: 75px"><img src="img/info3.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
                   </div>
                   <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
                     <p><b>Gratis Ongkir </b><br />Minimal Belanja Rp100.000 Seluruh Indonesia</p>
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 tengah">
                 <div class="row d-flex" data-aos="zoom-in-up" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
                   <div class="col-md-3">
-                    <div style="width: 75px; height: 75px"><img src="img/info4.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
+                    <div class="mx-auto" style="width: 75px; height: 75px"><img src="img/info4.png" style="width: 100%; height: 100%; border-radius: 15px" alt="" /></div>
                   </div>
                   <div class="col-md-9 mt-1 ps-3" data-aos="zoom-in-down" data-aos-delay="250" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
                     <p><b>Produk Terlaris</b><br />Rekomendasi Produk Untuk Kamu</p>
@@ -667,7 +642,7 @@
                   <div class="col-md-6">
                     <img src="img/bdg.jpg" class="gambar-jelajah" alt="..." />
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 ditengah">
                     <h1 class="">L O K A S I</h1>
                     <p class="">Terletak di bagian utara jantung kota Bandung. 200 meter dari pintu keluar tol Pasteur. Kami berencana untuk membuka toko di beberapa kota besar di Indonesia</p>
                   </div>
@@ -678,7 +653,7 @@
                   <div class="col-md-6">
                     <img src="img/jelajah.jpg" class="d-block gambar-jelajah" alt="..." />
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 ditengah">
                     <h1>J E L A J A H</h1>
                     <p>Kami memiliki beberapa ruangan untuk melihat-lihat produk kami. Asisten ahli kami dapat memandu Anda memilih produk terbaik yang cocok untuk Anda.</p>
                   </div>
@@ -689,7 +664,7 @@
                   <div class="col-md-6">
                     <img src="img/ahli.jpg" class="d-block gambar-jelajah" alt="..." />
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 ditengah">
                     <h1>B E L I</h1>
                     <p>Apakah Anda sedang mencari oleh-oleh atau sesuatu untuk dibawa pulang, kami memiliki banyak pilihan produk kulit terbaik di seluruh Indonesia.</p>
                   </div>
