--- a/TipsTrick.html
+++ b/TipsTrick.html
@@ -70,8 +70,13 @@
     </nav>
     <div class="margprod">
       <div class="container" style="margin-top: -4.5rem">
-        <div class="row d-flex align-items-center">
+        <div class="row d-flex">
           <div class="col-md-5 text-center">
+            <div class="row">
+              <div class="col-md-12">
+                <marquee behavior="" direction="left"> <h1>Berita Terkini | Berita Terkini | Berita Terkini | Berita Terkini |</h1></marquee>
+              </div>
+            </div>
             <img class="foto1" src="img/tips1.jpg" style="border-radius: 15px" alt="" />
             <h3 class="text-start kecil">Cara Terbaik Merawat Jaket Kulit</h3>
             <h5 class="text-start">Tahan Lama dan Anti Jamur</h5>
@@ -144,12 +149,21 @@
             </div>
           </div>
           <div class="col-md-7">
-            <div class="row">
+            <div class="row mb-3">
               <div class="col-md-6">
-                <img class="foto12" style="border-radius: 15px" src="img/sepatu_rawat.jpg" alt="" />
-                <h4 class="kecil">Merawat Sepatu Kulit Dengan Mudah dan Cepat</h4>
-                <h6>Tahan Air dan Berkilau</h6>
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <div class="card berita">
+                  <div class="berita-image">
+                    <img class="foto12" style="border-radius: 15px" src="img/sepatu_rawat.jpg" alt="" />
+                  </div>
+                  <div class="category">Perawatan Sepatu</div>
+                  <div class="heading">
+                    Merawat Sepatu Kulit Dengan Mudah dan Cepat
+                    <br />
+                    <br />
+                    <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop1" aria-controls="staticBackdrop1"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                    <div class="pencipta">By <span class="nama-berita">David</span> 4 days ago</div>
+                  </div>
+                </div>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop1" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Merawat Sepatu Kulit Dengan Mudah dan Cepat, Tahan Air dan Berkilau</h5>
@@ -205,10 +219,19 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <img class="foto12" style="border-radius: 15px" src="img/bahan_kulit.jpg" alt="" />
-                <h4>Cara Mengidentifikasi Bahan Kulit Asli</h4>
-                <h6>Kulit Asli vs Kulit Sintetis</h6>
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <div class="card berita">
+                  <div class="berita-image">
+                    <img class="foto12" style="border-radius: 15px" src="img/bahan_kulit.jpg" alt="" />
+                  </div>
+                  <div class="category">Perawatan Bahan Kulit</div>
+                  <div class="heading">
+                    Cara Mengidentifikasi Bahan Kulit Asli
+                    <br />
+                    <br />
+                    <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop2" aria-controls="staticBackdrop2"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                    <div class="pencipta">By <span class="nama-berita">Arthur</span> 7 days ago</div>
+                  </div>
+                </div>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop2" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Cara Mengidentifikasi Bahan Kulit Asli, Kulit Asli vs Kulit Sintetis</h5>
@@ -275,12 +298,21 @@
                 </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row mb-3">
               <div class="col-md-6">
-                <img class="foto12" style="border-radius: 15px" src="img/jelajah.jpg" alt="" />
-                <h4>Jenis Bahan Tas Kulit yang Banyak Dicari</h4>
-                <h6>Bahan Terbaik Terpilih Oleh Ahli</h6>
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <div class="card berita">
+                  <div class="berita-image">
+                    <img class="foto12" style="border-radius: 15px" src="img/jelajah.jpg" alt="" />
+                  </div>
+                  <div class="category">Bahan Tas Kulit</div>
+                  <div class="heading">
+                    Jenis Bahan Tas Kulit yang Banyak Dicari
+                    <br />
+                    <br />
+                    <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop3" aria-controls="staticBackdrop3"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                    <div class="pencipta">By <span class="nama-berita">Yehezkiel</span> 13 days ago</div>
+                  </div>
+                </div>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop3" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Jenis Bahan Tas Kulit yang Banyak Dicari, Bahan Terbaik Terpilih Oleh Ahli</h5>
@@ -334,10 +366,19 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <img class="foto12" style="border-radius: 15px" src="img/about3.jpg" alt="" />
-                <h4>Cara Memilih Jaket Kulit Berkualitas</h4>
-                <h6>Nyaman dan Tidak Panas Digunakan</h6>
-                <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                <div class="card berita">
+                  <div class="berita-image">
+                    <img class="foto12" style="border-radius: 15px" src="img/about3.jpg" alt="" />
+                  </div>
+                  <div class="category">Jaket Kulit</div>
+                  <div class="heading">
+                    Cara Memilih Jaket Kulit Berkualitas
+                    <br />
+                    <br />
+                    <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop4" aria-controls="staticBackdrop4"><p class="text-start" style="color: blue">Baca Selengkapnya...</p></a>
+                    <div class="pencipta">By <span class="nama-berita">cristianto</span> 23 days ago</div>
+                  </div>
+                </div>
                 <div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop4" aria-labelledby="staticBackdropLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="staticBackdropLabel">Cara Memilih Jaket Kulit Berkualitas, Nyaman dan Tidak Panas Digunakan</h5>
@@ -512,6 +553,29 @@
       AOS.init();
     </script>
     <script src="script/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script>
+      function addDarkmodeWidget() {
+        const options = {
+          bottom: '64px', // default: '32px'
+          right: '32px', // default: '32px'
+          left: 'unset', // default: 'unset'
+          time: '0.5s', // default: '0.3s'
+          mixColor: '#fff', // default: '#fff'
+          backgroundColor: '#fff', // default: '#fff'
+          buttonColorDark: '#100f2c', // default: '#100f2c'
+          buttonColorLight: '#fff', // default: '#fff'
+          saveInCookies: false, // default: true,
+          label: '🌓', // default: ''
+          autoMatchOsTheme: true, // default: true
+        };
+
+        const darkmode = new Darkmode(options);
+        darkmode.showWidget();
+      }
+
+      window.addEventListener('load', addDarkmodeWidget);
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
