--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <button class="BtnAnm hehehe-boy">Sign in</button>
+              <button class="BtnAnm">Sign in</button>
             </li>
           </ul>
         </div>
@@ -605,6 +605,29 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script>
+      function addDarkmodeWidget() {
+        const options = {
+          bottom: '64px', // default: '32px'
+          right: '32px', // default: '32px'
+          left: 'unset', // default: 'unset'
+          time: '0.5s', // default: '0.3s'
+          mixColor: '#fff', // default: '#fff'
+          backgroundColor: '#fff', // default: '#fff'
+          buttonColorDark: '#100f2c', // default: '#100f2c'
+          buttonColorLight: '#fff', // default: '#fff'
+          saveInCookies: false, // default: true,
+          label: '🌓', // default: ''
+          autoMatchOsTheme: true, // default: true
+        };
+
+        const darkmode = new Darkmode(options);
+        darkmode.showWidget();
+      }
+
+      window.addEventListener('load', addDarkmodeWidget);
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
