--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <nav class="navbar nav sticky-top">
+    <nav class="navbar nav sticky-top" style="background-color: white">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-list" viewBox="0 0 13 13">
@@ -198,9 +198,9 @@
     <!-- Image Overlay -->
     <section class="bg-contact">
       <div class="container">
-        <h1 class="text-center pt-5" data-aos="zoom-in-down" data-aos-duration="500" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-anchor-placement="top-center">Contact Us</h1>
         <div class="row mb-5">
           <div class="col-md-7 mx-auto justify-content-center">
+            <h1 class="text-center pt-5" data-aos="zoom-in-down" data-aos-duration="500" data-aos-easing="ease-in-out" data-aos-mirror="true">Contact Us</h1>
             <div class="formcontact">
               <form id="myForm" name="CrediTion">
                 <div class="mb-3">
@@ -390,7 +390,7 @@
           time: '0.5s', // default: '0.3s'
           mixColor: '#fff', // default: '#fff'
           backgroundColor: '#fff', // default: '#fff'
-          buttonColorDark: '#100f2c', // default: '#100f2c'
+          buttonColorDark: 'white', // default: '#100f2c'
           buttonColorLight: '#fff', // default: '#fff'
           saveInCookies: false, // default: true,
           label: '🌓', // default: ''
