--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
       </div>
     </div>
     <!-- </section> -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="rounded-bottom" style="background-color: #d1b298">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="rounded-bottom" style="background-color: #d1b298">
       <path
         fill="white"
         fill-opacity="1"
         d="M0,96L0,160L180,160L180,320L360,320L360,160L540,160L540,64L720,64L720,320L900,320L900,192L1080,192L1080,256L1260,256L1260,128L1440,128L1440,0L1260,0L1260,0L1080,0L1080,0L900,0L900,0L720,0L720,0L540,0L540,0L360,0L360,0L180,0L180,0L0,0L0,0Z"
       ></path>
-    </svg>
+    </svg> -->
     <div class="" style="background-color: #d1b298">
       <div class="container py-5">
         <h2 class="text-dark text-center" data-aos="zoom-in-down" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true">Special Discount Hingga 60%</h2>
